<resources>
    <string name="app_name">MMNews</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_news_details">နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့် နိုင်ငံခြားရေးဝန်ကြီး ဒေါ်အောင်ဆန်းစုကြည်က (၁၃) ကြိမ်မြောက် အေဆမ်နိုင်ငံခြားရေးဝန်ကြီးများ အစည်းအဝေး အဖွင့်အမှာစကား ပြောကြားမှုတွင် ခြိမ်းခြောက်မှုနှင့် အရေးပေါ် အခြေအနေသစ်များကြောင့် ကမ္ဘာတစ်ဝန်းတွင် ပဋိပက္ခဖြစ်ပွားမှုများ မြင့်တက်လာနေကြောင်း ထည့်သွင်းပြောကြားခဲ့သည်။

(၁၃) ကြိမ်မြောက် အေဆမ်နိုင်ငံခြားရေးဝန်ကြီးများ အစည်းအဝေးဖွင့်ပွဲကို နို၀င်ဘာ ၂၀ ရက်က နေပြည်တော်ရှိ မြန်မာအပြည်ပြည်ဆိုင်ရာ ကွန်ဗန်းရှင်းဗဟိုဌာနတွင် ကျင်းပခဲ့ရာ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့် နိုင်ငံခြားရေးဝန်ကြီး ဒေါ်အောင်ဆန်းစုကြည် တက်ရောက်ပြီး အဖွင့်အမှာစကား ပြောကြားခဲ့သည်။

ဒေါ်အောင်ဆန်းစုကြည်က ကမ္ဘာပေါ်တွင် ဖြစ်စဉ်အမျိုးမျိုးမှ ပဋိပက္ခဖြစ်ပွားနေမှုများ မြင့်တက်လာနေပြီး လျော့နည်းသွားခြင်း မရှိသည်ကို မိမိတို့အားလုံး သတိထားမိကြောင်းနှင့် တရားမဝင် ရွှေ့ပြောင်းအခြေချခြင်း၊ အကြမ်းဖက်ဝါဒနှင့် အစွန်းရောက်ဝါဒ ပြန့်ပွားလာခြင်း၊ လူတန်းစား ကွာဟခြင်းနှင့် နျူကလီးယားစစ်ပွဲ ဖြစ်ပွားလာနိုင်သည့် အခြေအနေများကိုပါ ရင်ဆိုင်နေရကြောင်း ပြောကြားခဲ့သည်။
“ကမ္ဘာပေါ်မှာ ဖြစ်စဉ်အမျိုးမျိုးကနေ ပြီးနေတော့ ပဋိပက္ခ ဖြစ်ပွားနေတာတွေ မြင့်တက်လာနေတာ လျော့နည်းသွားတယ်ဆိုတာ မရှိဘူးဆိုတာ ကျွန်မတို့အားလုံး သတိထားမိမှာပါ။ ဒီနေ့မှာ ကျွန်မတို့အနေနဲ့ ကမ္ဘာလုံးဆိုင်ရာ မသေချာမရေရာမှုတွေနဲ့ မတည်ငြိမ်မှု အပိုင်းအခြားနဲ့ ကြုံတွေ့နေရပါတယ်။ ခြိမ်းခြောက်မှုနဲ့ အရေးပေါ် အခြေအနေသစ်တွေကနေ ကမ္ဘာတစ်ဝန်းမှာ ပဋိပက္ခဖြစ်ပွားတာတွေဟာ မြင့်တက်လာနေတာ ဖြစ်ပါတယ်။ တရားမဝင် ရွှေ့ပြောင်းအခြေချခြင်း၊ အကြမ်းဖက်ဝါဒနဲ့ အစွန်းရောက်ဝါဒ ပြန့်ပွားလာခြင်း၊ လူတန်းစား ကွာဟခြင်းနဲ့ နျူကလီးယားစစ်ပွဲ ဖြစ်ပွားလာနိုင်တယ်ဆိုတဲ့ အခြေအနေတွေနဲ့တောင် ရင်ဆိုင်နေရပါတယ်။ ပဋိပက္ခတွေဟာ ငြိမ်းချမ်းရေးကို လူ့အသိုင်းအဝိုင်းကနေ ဆွဲထုတ်သွားပါတယ်။
ဖွံ့ဖြိုးတိုးတက်မှု မရှိခြင်းနဲ့ ဆင်းရဲဒုက္ခတွေကို ချန်သွားပါတယ်။ လူတွေနဲ့ နိုင်ငံတွေကိုတောင် တစ်ဦးနဲ့တစ်ဦး၊ တစ်နိုင်ငံနဲ့ တစ်နိုင်ငံ ဝေးကွာသွားစေပါတယ်” ဟု ဒေါ်အောင်ဆန်းစုကြည်က ပြောကြားခဲ့သည်။

ဆက်လက်၍ ဒေါ်အောင်ဆန်းစုကြည်က မြန်မာနိုင်ငံ အပါအဝင် များစွာသောနိုင်ငံများ၏ သမိုင်းကြောင်းကို ပြန်ကြည့်မည်ဆိုပါက ပဋိပက္ခနှင့် မတည်ငြိမ်မှုများကြောင့် နိုင်ငံတစ်နိုင်ငံ၏ ဖွံ့ဖြိုးတိုးတက်မှုကို ရှည်ကြာခိုင်မြဲသည့် အရိပ်တစ်ခုအဖြစ် လွှမ်းမိုးနေသည်ကို မြင်တွေ့ရကြောင်းနှင့် ငြိမ်းချမ်းမှု မရှိပါက ကြာရှည်တည်မြဲသည့် တိုးတက်မှုနှင့် သာယာဝပြောမှုကို ရရှိနိုင်မည် မဟုတ်ကြောင်းလည်း ပြောကြားခဲ့သည်။

ထို့ပြင် ဒေါ်အောင်ဆန်းစုကြည်က နိုင်ငံ့ခေါင်းဆောင်များ အနေဖြင့် နိုင်ငံတစ်နိုင်ငံချင်းစီ၏ ကန့်သတ်မှုနှင့် အခက်အခဲများကို စစ်မှန်သည့် နားလည်မှုရှိပါက ကမ္ဘာလုံးဆိုင်ရာ ပြဿနာများကို ဖြေရှင်းရာတွင် ပိုမိုလွယ်ကူ အကျိုးသက်ရောက်မည် ဖြစ်ကြောင်း၊ နိုင်ငံအချင်းချင်း မိတ်ဖက်ဆောင်ရွက်မှု အားကောင်းခြင်းဖြင့် ငြိမ်းချမ်းမှုနှင့် စဉ်ဆက်မပြတ် ဖွံ့ဖြိုးတိုးတက်မှုကို ထိန်းသိမ်းမြှင့်တင်နိုင်ရန် ယခု အေဆမ် အစည်းအဝေးအတွက် ဆောင်ပုဒ်ကို “ငြိမ်းချမ်းရေးနှင့် စဉ်ဆက်မပြတ် ဖွံ့ဖြိုးတိုးတက်မှုများအတွက် မိတ်ဖက်ဆောင်ရွက်မှုကို ပိုမိုအားကောင်းစေရန် ဆောင်ရွက်ခြင်း” ဟု အဆိုတင်သွင်းခဲ့ခြင်း ဖြစ်ကြောင်း ပြောကြားခဲ့သည်။

ဒေါ်အောင်ဆန်းစုကြည်၏ အဖွင့်အမှာစကား ပြောကြားပြီးနောက် အာရှဘက်မှ အာဆီယံအဖွဲ့အတွက် ညှိနှိုင်းရေးမှူးတာဝန် ယူထားသည့် ဖိလစ်ပိုင်နိုင်ငံမှ ကိုယ်စားလှယ်တစ်ဦးနှင့် နီဆာအဖွဲ့အတွက် ပါကစ္စတန်နိုင်ငံမှ ကိုယ်စားလှယ် တစ်ဦးတို့က အမှာစကား ပြောကြားခဲ့သည်။

ယင်းနောက် ဥရောပဘက်မှ ညိနှိုင်းရေးမှူးအဖြစ် တာဝန်ယူထားသည့် ဥရောပသမဂ္ဂ အဆင့်မြင့် ကိုယ်စားလှယ် Federica Mogherini နှင့် အက်စ်တိုးနီးယားနိုင်ငံတို့မှ ကိုယ်စားလှယ်တို့က အမှာစကား ပြောကြားခဲ့သည်။

ဆက်လက်၍ နို၀င်ဘာ ၁၅ ရက်မှ ၂၀ ရက်အထိ ရန်ကုန်မြို့နှင့် နေပြည်တော်တို့တွင် ကျင်းပခဲ့သည့် ၈ ကြိမ်မြောက် ASEM Model 2017 သို့ တက်ရောက်ခဲ့သော လူငယ်ကိုယ်စားလှယ် နှစ်ဦးကလည်း အေဆမ် ဆွေးနွေးမှုပုံစံနှင့် ပတ်သက်၍ ၎င်းတို့၏ အမြင်များကို ပြောကြားခဲ့သည်။

(၁၃) ကြိမ်မြောက် အေဆမ်နိုင်ငံခြားရေးဝန်ကြီးများ အစည်းအဝေးကို နေပြည်တော်ရှိ MICC – 1 တွင် နို၀င်ဘာ ၂၀ နှင့် ၂၁ ရက်တို့၌ ကျင်းပနေခြင်းဖြစ်ပြီး ယခုနှစ်အတွက် အာရှ-ဥရောပ အစည်းအဝေးအကြောင်းအရာမှာ “ငြိမ်းချမ်းရေးနှင့် စဉ်ဆက်မပြတ် ဖွံ့ဖြိုးတိုးတက်မှုများအတွက် မိတ်ဖက်ဆောင်ရွက်မှုကို ပိုမိုအားကောင်းစေရန် ဆောင်ရွက်ခြင်း” ဖြစ်သည်။

အေဆမ်၌ အဖွဲ့ဝင်အဖြစ် အာရှမှ ၂၁ နိုင်ငံနှင့် အာဆီယံ အတွင်းရေးမှူးချုပ်ရုံး၊ ဥရောပဒေသမှ EU အဖွဲ့ဝင် ၃၀ နိုင်ငံနှင့် ဥရောပကော်မရှင်တို့ ပါ၀င်ပြီး စုစုပေါင်း နိုင်ငံပေါင်း ၅၁ နိုင်ငံနှင့် ဒေသဆိုင်ရာအဖွဲ့ကြီး နှစ်ခုတို့ ပါ၀င်ကြောင်း သိရသည်။

အေဆမ်နိုင်ငံခြားရေးဝန်ကြီးများ အစည်းအဝေးမတိုင်မီ အေဆမ် အဆင့်မြင့်အရာရှိကြီးများ အစည်းအဝေးနှင့် ဆက်စပ် အစည်းအဝးများကို နို၀င်ဘာ ၁၇ ရက်မှ ၁၉ ရက်အထိ နေပြည်တော်ရှိ MICC – 1 တွင် ကျင်းပခဲ့ပြီး အေဆမ် မိတ်ဘက်နိုင်ငံများမှ ပါ၀င် တက်ရောက်ခဲ့ကြကြောင်း ထုတ်ပြန်ချက်အရ သိရသည်။</string>
    <string name="title_news_by_category">News by Category</string>

    <string name="sports_news_detail01">Hazard says he will sign Chelsea contract after Courtois</string>
    <string name="sports_news_detail02">Manchester United to rival Liverpool for Christian Pulisic</string>
    <string name="sports_news_detail03">No bidding war for Sanchez, Wenger claims</string>
    <string name="sports_news_detail04">Guardiola breaks Premier League record with fourth straight award</string>

    <string name="international_news_detail_big">US news / Donald Trump cancels London visit amid protest fears</string>
    <string name="international_news_medium_one">President will not open new US embassy next month, with secretary of state Rex Tillerson likely to take his place</string>
    <string name="international_news_medium_two">Mira Sorvino / I am terribly sorry for working with Woody Allen</string>
    <string name="international_news_medium_three">The long read / How death got cool</string>
    <string name="international_news_small_1">Facebook / overhauls News Feed in favor of meaningful social interactions</string>
    <string name="international_news_small_2">Sport / IOC accused of backroom deals with Russia over doping scandal</string>
    <string name="international_news_small_3">China / Marriott apologises to China over Tibet and Taiwan error</string>

    <string name="menu_item_all_news">All News</string>
    <string name="menu_item_news_by_category">News By Category</string>

    <string name="title_all_news">All News</string>
</resources>

