<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main_international_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:id="@+id/rl_international_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_headline"
            android:layout_marginTop="12dp">


            <TextView
                android:id="@+id/tv_international_news"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/international_news_detail_big"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_international_news"
                android:layout_below="@id/tv_international_news"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_watch_later_black_24dp"
                android:text="1h" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_international_news"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_bookmark_black_24dp" />

            <ImageView
                android:id="@+id/iv_international_news_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_post_time"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dornaltrump" />


            <TextView
                android:id="@+id/tv_question_and_answer"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_international_news"
                android:layout_below="@id/iv_international_news_main"
                android:text="@string/international_news_medium_one"
                android:textSize="18sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_international_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_main_international_news"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/colorPrimary" />

            <android.support.v7.widget.CardView

                android:id="@+id/cv_international_news_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_one"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:id="@+id/rl_international_news_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_international_news_one"
                        android:layout_width="155dp"
                        android:layout_height="70dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/international_news_medium_two"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_post_time_for_news_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tv_international_news_one"
                        android:layout_below="@id/tv_international_news_one"
                        android:layout_marginTop="8dp"
                        android:drawableLeft="@drawable/ic_watch_later_black_24dp"
                        android:text="1h" />


                    <ImageView
                        android:id="@+id/iv_international_news_one"
                        android:layout_width="167dp"
                        android:layout_height="150dp"
                        android:layout_below="@id/tv_post_time_for_news_one"
                        android:layout_marginTop="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/woman" />


                </RelativeLayout>


            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/colorPrimary" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_international_news_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_two"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:id="@+id/rl_international_news_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_headline"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_international_news_two"
                        android:layout_width="155dp"
                        android:layout_height="70dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/international_news_medium_three"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_post_time_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tv_international_news_two"
                        android:layout_below="@id/tv_international_news_two"
                        android:layout_marginTop="8dp"
                        android:drawableLeft="@drawable/ic_watch_later_black_24dp"
                        android:text="1h" />


                    <ImageView
                        android:id="@+id/iv_international_news_two"
                        android:layout_width="167dp"
                        android:layout_height="150dp"
                        android:layout_below="@id/tv_post_time_two"
                        android:layout_marginTop="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/sunglass_skull" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_four"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_international_news"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main_international_news_text_one"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@id/view_four"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/tv_international_news_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/international_news_small_1"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view_five"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/cv_main_international_news_text_one"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main_international_news_text_two"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/view_five"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/tv_international_news_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/international_news_small_2"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view_six"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/cv_main_international_news_text_two"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main_international_news_text_three"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/view_six"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/tv_international_news_text_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/international_news_small_3"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>


</RelativeLayout>